# abb_experimental

abb_irb1600_6_145_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_irb1600_6_145_support/launch/: load_irb1600_6_145.launch  robot_interface_download_irb1600_6_145.launch  robot_state_visualize_irb1600_6_145.launch  test_irb1600_6_145.launch
abb_irb1600_6_145_support/meshes/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
abb_irb1600_6_145_support/meshes/visual/: link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl
abb_irb1600_6_145_support/tests/: roslaunch_test.xml
abb_irb1600_6_145_support/urdf/: irb1600_6_145.urdf  irb1600_6_145.xacro  irb1600_6_145_macro.xacro
